Archive2/dd/ebc343b6029c12/output
main.cpp:23:5: error: no matching function for call to 'foo'
    foo(bar());
    ^~~
main.cpp:10:6: note: candidate function not viable: expects an l-value for 1st argument
void foo(A&)
     ^
main.cpp:24:5: error: no matching function for call to 'foo'
    foo(A());
    ^~~
main.cpp:10:6: note: candidate function not viable: expects an l-value for 1st argument
void foo(A&)
     ^
2 errors generated.
